<resources>
    <string name="app_name">Lucas Math</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lucas Math</string>
    <string name="nav_header_subtitle">github.com/lucas-martinconi/lucas-math</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Setari</string>

    <string name="menu_acasa">Acasa</string>
    <string name="menu_exerseaza">Exerseaza</string>
    <string name="menu_concurs">Concurs</string>
    <string name="menu_probleme">Probleme</string>
    <string name="menu_clasament">Clasament</string>
    <string name="menu_despre">Despre</string>
</resources>