<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_acasa"
            android:title="@string/menu_acasa" />
        <item
            android:id="@+id/nav_exerseaza"
            android:title="@string/menu_exerseaza" />
        <item
            android:id="@+id/nav_concurs"
            android:title="@string/menu_concurs" />
        <item
            android:id="@+id/nav_probleme"
            android:title="@string/menu_probleme" />
        <item
            android:id="@+id/nav_clasament"
            android:title="@string/menu_clasament" />
        <item
            android:id="@+id/nav_despre"
            android:title="@string/menu_despre" />
    </group>
</menu>